[package]
name = "daylio-analyze"
version = "0.1.11"
edition = "2021"
authors = ["Kim D. Jeker <git@kije.ch>"]

[features]
default = ["polars_features_minimal"]
debug = ["fmt"]
fmt = ["polars/fmt"]
csv = ["polars/csv"]
cse = ["polars/cse"]
temporal = ["polars/temporal"]
nightly = ["polars/nightly"]
timezones = ["polars/timezones"]
process_activities = ["polars/list_sets",]
process_factors = ["polars/extract_groups","polars/lazy_regex","polars/dtype-struct",]
polars_features_base = [
    "temporal",
    "polars/strings",
    "polars/dtype-date",
    "polars/dtype-datetime",
    "polars/dtype-time",
    "polars/dtype-i8",
    "polars/dtype-u8",
    "polars/dtype-i16",
    "polars/lazy",
    "polars/dtype-categorical",
    "polars/checked_arithmetic",
]
polars_features_minimal = [
    "polars_features_base",
    "polars/sign",
    "polars/is_in",
    "polars/diff",
    "polars/list_eval",
    "polars/lazy_regex",
]
polars_features_full = [
    "polars_features_minimal",
    "cse",
    "polars/concat_str",
    "polars/async",
    "polars/simd",
    "polars/performant"
]
no_proccess = []

[dependencies]
phf = { version = "^0.11", features = ["macros"] }
const-gen = { version = "^1.6" }
thiserror = "^1.0"
enum-kinds = "^0.5"
enum_access = { version = "^0.4", git = "https://github.com/kije/enum_access.git" }

[dependencies.polars]
version = "^0.33"
default-features = false

[build-dependencies]
phf = { version = "^0.11", default-features = false }
phf_codegen = "^0.11"
syn = { version = "^2.0", features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"
const-gen = { version = "^1.5" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true
