[package]
name = "daylio-analyze"
version = "0.1.20"
edition = "2021"
authors = ["Kim D. Jeker <git@kije.ch>"]

[[example]]
name = "analyze"
required-features = ["process", "fmt", "csv"]


[features]
default = ["polars_features_minimal", "process"]

process = []
process_activities = ["process","polars/list_sets"]
process_factors = ["process","polars/extract_groups","polars/regex","polars/dtype-struct"]

debug = ["fmt"]
fmt = ["polars/fmt"]
csv = ["polars/csv"]
cse = [
    "polars/cse"
]
simd = ["polars/simd"]
temporal = ["polars/temporal"]
nightly = ["polars/nightly"]
timezones = ["polars/timezones", "temporal"]
polars_features_base = [
    "polars/strings",
    "polars/dtype-date",
    "polars/dtype-datetime",
    "polars/dtype-time",
    "polars/dtype-i8",
    "polars/dtype-u8",
    "polars/dtype-i16",
    "polars/lazy",
    "polars/dtype-categorical",
    "polars/checked_arithmetic",
]
polars_features_minimal = [
    "polars_features_base",
    "temporal",
    "polars/sign",
    "polars/is_in",
    "polars/diff",
    "polars/list_eval",
    "polars/regex",
]
polars_features_full = [
    "polars_features_minimal",
    "cse",
    "polars/concat_str",
    "polars/performant"
]


[dependencies]
phf = { version = "^0.11", features = ["macros"] }
const-gen = { version = "1.6" }
thiserror = "^1.0"
enum-kinds = "^0.5"
enum_access = { version = "^0.4", git = "https://github.com/kije/enum_access.git" }

[dependencies.polars]
version = "^0.41"
default-features = false

[build-dependencies]
phf = { version = "^0.11", default-features = false }
phf_codegen = "^0.11"
syn = { version = "^2.0", features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"
const-gen = { version = "^1.6" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true
